# uv-multi-tools

./: README.md  README_rus.md  pyproject.toml
src/mytools/: __init__.py  greeter.py  orchestrator.py
src/mytools/tools/: __init__.py  ui.py
src/projtool/: __init__.py  sysinfo.py
